# git-autosquash

./: CLAUDE.md  PATCH_GENERATION_FIX.md  README.md  TEST_COMPLETION_SUMMARY.md  TEST_STRATEGY_PATCH_GENERATION.md  capture_readme_screenshots.py  pyproject.toml
.codanna/: settings.toml
docs/: index.md  installation.md
site/: 404.html  index.html  objects.inv  sitemap.xml
tests/: base_test_repository.py  conftest_patch_generation.py  error_handling_framework.py  pyte_screenshot_capture.py  test_batch_git_ops_edge_cases.py  test_blame_analyzer.py  test_bounded_cache.py  test_contextual_blame.py  test_error_handling.py  test_fallback_logic.py  test_git_native_complete_handler.py  test_git_native_handler.py  test_git_ops.py  test_git_worktree_handler.py  test_hunk_parser.py  test_hunk_target_resolver_edge_cases.py  test_main_integration.py  test_patch_generation_complex_workflows.py  test_patch_generation_context_fix.py  test_patch_generation_edge_cases.py  test_patch_generation_error_recovery.py  test_patch_generation_fix.py  test_patch_generation_fix_refactored.py  test_patch_generation_integration_refactored.py  test_patch_generation_performance.py  test_patch_generation_production.py  test_patch_generation_regression.py  test_patch_generation_security.py  test_patch_generation_simple.py  test_patch_generation_stress.py  test_patch_generation_stress_refactored.py  test_performance_benchmarks.py  test_production_optimizations.py  test_rebase_conflict_recovery.py  test_rebase_manager.py  test_security_edge_cases.py  test_state_controller.py  test_tui_widgets.py
(+74 files in other folders)
