[project]
name = "git-autosquash"
dynamic = ["version"]
description = "Automatically squash git changes back into historical commits"
readme = "README.md"
authors = [
    { name = "Andrew Leech", email = "andrew.leech@planetinnovation.com.au" }
]
requires-python = ">=3.12"
dependencies = [
    "textual>=5.3.0",
]

[project.scripts]
git-autosquash = "git_autosquash.main:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "ruff>=0.12.10",
]
